--- a/css/main.css
+++ b/css/main.css
@@ -5,3 +5,20 @@ header {background-color: linen}
 input.ng-invalid.ng-dirty {background-color: pink}
 
 input.ng-valid.ng-dirty {background-color: lightgreen}
+
+.key {
+  width: 33px;
+  padding: 5px 10px !important;
+}
+
+// Class
+.center-block {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+// Usage as a mixin
+.element {
+  .center-block();
+}
