--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,13 @@ input.ng-invalid.ng-dirty {background-color: pink}
 input.ng-valid.ng-dirty {background-color: lightgreen}
 
 .key {
-  width: 33px;
+  width: 66px;
+  height: 60px;
+  padding: 5px 10px !important;
+}
+
+#clearKey{
+  width: 198px;
+  height: 60px;
   padding: 5px 10px !important;
 }
