--- a/css/main.css
+++ b/css/main.css
@@ -41,3 +41,38 @@ input.ng-valid.ng-dirty {background-color: lightgreen}
 	border-color: #C59FA5;
   color: black;
 }
+
+#saveKey {
+	font-size: small;
+}
+
+#fileUpload {
+	  position: relative;
+    overflow: hidden;
+    margin: 0px;
+		font-size: small;
+		padding-top: 18px !important;
+}
+
+#fileUpload input#upload {
+	  position: absolute;
+    top: 0;
+    right: 0;
+    margin: 0;
+    padding: 0;
+    font-size: 20px;
+    cursor: pointer;
+    opacity: 0;
+    filter: alpha(opacity=0);
+}
+
+#bottomRow {
+	padding-left:66px;
+}
+
+#useKey {
+	height: 60px;
+	background-image: none;
+	background-color: crimson;
+	border-color: #AD233D;
+}
