--- a/css/main.css
+++ b/css/main.css
@@ -1,45 +1,64 @@
-body {font-family: Play}
+body {
+	font-family: Play, sans-serif
+}
 
-header {background-color: linen}
+header {
+	background-color: linen
+}
 
-input.ng-pristine.ng-invalid {background-color: orange}
+/*noinspection ALL*/
+input.ng-pristine.ng-invalid {
+	background-color: orange
+}
 
-input.ng-valid.ng-pristine {background-color: lightgreen}
+/*noinspection ALL*/
+input.ng-valid.ng-pristine {
+	background-color: lightgreen
+}
 
-input.ng-invalid.ng-not-empty {background-color: pink}
+/*noinspection ALL*/
+input.ng-invalid.ng-not-empty {
+	background-color: pink
+}
 
-input.ng-invalid.ng-dirty {background-color: pink}
+/*noinspection ALL*/
+input.ng-invalid.ng-dirty {
+	background-color: pink
+}
 
-input.ng-valid.ng-dirty {background-color: lightgreen}
+/*noinspection ALL*/
+input.ng-valid.ng-dirty {
+	background-color: lightgreen
+}
 
 .key {
-  width: 66px;
-  height: 60px;
-  padding: 5px 10px !important;
+	width: 66px;
+	height: 60px;
+	padding: 5px 10px !important;
 }
 
 #clearKey {
-  width: 198px;
-  height: 60px;
-  padding: 5px 10px !important;
+	width: 198px;
+	height: 60px;
+	padding: 5px 10px !important;
 }
 
 .fourkeyrow {
-	margin-left:66px;
+	margin-left: 66px;
 }
 
 #addKey {
 	background-color: lightgreen !important;
 	background-image: none;
 	border-color: #8BC18B;
-  color: black;	
+	color: black;
 }
 
 #deleteKey {
 	background-color: pink !important;
 	background-image: none;
 	border-color: #C59FA5;
-  color: black;
+	color: black;
 }
 
 #saveKey {
@@ -47,32 +66,31 @@ input.ng-valid.ng-dirty {background-color: lightgreen}
 }
 
 #fileUpload {
-	  position: relative;
-    overflow: hidden;
-    margin: 0px;
-		font-size: small;
-		padding-top: 18px !important;
+	position: relative;
+	overflow: hidden;
+	margin: 0;
+	font-size: small;
+	padding-top: 18px !important;
 }
 
 #fileUpload input#upload {
-	  position: absolute;
-    top: 0;
-    right: 0;
-    margin: 0;
-    padding: 0;
-    font-size: 20px;
-    cursor: pointer;
-    opacity: 0;
-    filter: alpha(opacity=0);
+	position: absolute;
+	top: 0;
+	right: 0;
+	margin: 0;
+	padding: 0;
+	font-size: 20px;
+	cursor: pointer;
+	opacity: 0;
+	filter: alpha(opacity=0);
 }
 
 #bottomRow {
-	padding-left:66px;
+	padding-left: 66px;
 }
 
 #useKey {
 	height: 60px;
-	background-image: none;
-	background-color: crimson;
+	background: crimson none;
 	border-color: #AD233D;
 }
